Fix: Package name text is cut off at bottom
fix #334

--- a/web/static/css/template/_home.scss
+++ b/web/static/css/template/_home.scss
@@ -263,7 +263,6 @@
         text-overflow: ellipsis;
         word-break: break-all;
         word-wrap: break-word;
-        display: block;
       }
       .description {
         font-size: 12px;
